<resources>
    <string name="app_name">Todo List</string>
    <string name="back">back</string>
    <string name="task_list">Task List</string>
    <string name="pending">Pending</string>
    <string name="add_a_task">Add a task</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_task_title">Please enter task title</string>
    <string name="please_select_date_time">Please select date and time</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_to_delete">Do you want to delete</string>
    <string name="this_action_cant_be_undone">this action can\'t be undone.</string>
    <string name="task_added_success_fully">Task added successfully.</string>
    <string name="item_deleted_successfully">Item deleted successfully.</string>
    <string name="ok">OK</string>
    <string name="sort_by_date_ascending">Sort By Date Ascending</string>
    <string name="sort_by_date_descending">Sort By Date Descending</string>
    <string name="reset">Reset</string>
    <string name="no_task_yet">Don\'t have a any task yet start adding task using + button</string>
    <string name="selected_time_is_past">Selected time is in the past</string>
</resources>