<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.todolist.TodoListActivity">

    <include
        android:id="@+id/toolbarAddTask"
        layout="@layout/layout_toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTaskTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_27sdp"
        android:layout_marginTop="@dimen/_27sdp"
        android:layout_marginEnd="@dimen/_27sdp"
        android:hint="@string/task_title"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddTask">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSelectDateTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_27sdp"
        android:layout_marginTop="@dimen/_27sdp"
        android:layout_marginEnd="@dimen/_27sdp"
        android:hint="@string/time"
        app:layout_constraintTop_toBottomOf="@+id/tilTaskTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTaskTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_27sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSelectDateTime">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_button_background"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:text="@string/cancel"
            android:textColor="@color/cancel_button_color"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>