<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_30sdp"
    android:background="@drawable/background_delete_todo_dialog">

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_19sdp"
        android:layout_marginTop="@dimen/_19sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/warning"
        android:textColor="@color/toolbar_title_color"
        android:textSize="@dimen/_19ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWarningDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_19sdp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/warning_description_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvWarning"
        app:layout_constraintTop_toBottomOf="@+id/tvWarning"
        tools:text="Do you want to delete “Classification”, this action can’t be undone.  " />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_44sdp"
        android:layout_marginEnd="@dimen/_19sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textColor="@color/cancel_button_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvOk"
        app:layout_constraintTop_toBottomOf="@+id/tvWarningDescription" />

    <TextView
        android:id="@+id/tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_44sdp"
        android:layout_marginEnd="@dimen/_19sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ok"
        android:textColor="@color/cancel_button_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarningDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>

